# georef

./: .gitattributes  Cargo.toml
data/: 0916_2014_girdwood35.rxp  config.toml
src/: error.rs  georef.rs  imu_gnss.rs  lib.rs  linalg.rs  main.rs  point.rs  pos.rs  rotation.rs
tests/: girdwood.rs
