[package]
name = "georef"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[features]
rxp = ["pabst/rxp-source"]
sdf = ["pabst/sdf-source"]

[[bin]]
name = "georef"
doc = false

[dependencies]
docopt = "0.6"
las = { git = "https://github.com/gadomski/las-rs.git" }
pabst = { git = "https://github.com/gadomski/pabst.git" }
pof = { git = "https://github.com/gadomski/pof-rs.git" }
rustc-serialize = "0.3"
toml = "0.1"

[profile.test]
opt-level = 2
